--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -309,3 +309,47 @@
 	font-weight:bold;
 	font-size:16px;
 }
+
+.action-buttons{
+	text-align:right;
+	margin-right:40px;
+}
+
+.btnRight{
+	margin-top:10px;
+    margin-bottom:0px;
+    margin-right:20px;
+    min-width:100px;
+    float:right;
+}
+
+.modal-title{
+	margin-left:20px;
+}
+
+.modal-body{
+    font-size: large;
+    height:200px;
+    text-align: center;
+}
+
+.modal-body-text{
+    vertical-align: middle;
+    margin-top: 60px;
+    font-weight: bold;
+}
+
+ .modal-header{
+     background:#181414;
+     color:#6A5ACD;
+     font-weight:bold;
+ }
+
+ .filter-close-box{
+     padding:10px;
+     cursor:pointer;
+     font-size:20px;
+     font-weight: bold;
+    text-align: right;
+        
+}
