--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
@@ -88,3 +88,22 @@
 	margin-top:20px;
 	margin-bottom:50px;
 }
+
+.action-buttons{
+	text-align:right;
+	margin-right:40px;
+	margin-bottom:20px;
+	margin-top:20px;
+}
+
+.action-buttons button{
+	width:150px;
+}
+
+#account-details-input label{
+	width:50%;
+}
+
+#account-details-input input[type="text"]{
+	width:50%;
+}
