Adding IRL as country

--- a/recruit-gui/src/app/home/home.component.html
+++ b/recruit-gui/src/app/home/home.component.html
@@ -12,7 +12,7 @@
             	 	<p>At present there are {{totalNumberActiveCandidates}} IT candidates available in the CV database.</p>
             	 	<h3>Our background in IT</h3>
             	 	<p>
-            	 	Having spent over 22 years working in the IT sector we have extensive knowledge of the IT markets in which we work. Since 2021 Arenella has turned its 
+            	 	Having spent over 23 years working in the IT sector we have extensive knowledge of the IT markets in which we work. Since 2021 Arenella has turned its 
             	 	attention to sourcing of candidates for the IT recruitment sector.
             	 	</p>
             	 </div>
@@ -26,10 +26,10 @@
                     <div>
                     	We source both contract and permanent IT candidates for the following locations
                     	<ul>
-                    		<li>The Netherlands</li>
                     		<li>Belgium</li>
+                    		<li>The Netherlands</li>
+                    		<li>The Republic Of Ireland</li>
                     		<li>The United Kingdom</li>
-                    		<li>The republic of Ireleand</li>
                     	</ul>
                     </div>
                     <p>
@@ -64,6 +64,29 @@
                             </ul>
                         </div>
                     </div>
+                    <div class="row">
+	               		<div class="col">
+	               			<h3>Features</h3>
+	               			<table>
+	               				<tr>
+	               					<th><b>CV database</b></th>
+	               					<td>Search on and download CVs of immediately available IT candidates</td>
+	               				</tr>
+	               				<tr>
+	               					<th><b>Job Board</b></th>
+	               					<td>Place Job advert's to reach unregistered candidates</td>
+	               				</tr>
+	               				<tr>
+	               					<th><b>Marketplace</b></th>
+	               					<td>Collaborate with other recruiters to source / place candidates</td>
+	               				</tr>
+	               				<tr>
+	               					<th><b>Email Alerts</b></th>
+	               					<td>Receive notifications when selected types of candidates are added</td>
+	               				</tr>
+	               			</table>
+	               		</div>
+               		 </div>
                     <div class="row">
 	               		<div class="col">
 	               			<h3>Questions</h3>
