--- a/recruit-gui/src/app/new-candidate/new-candidate.component.html
+++ b/recruit-gui/src/app/new-candidate/new-candidate.component.html
@@ -30,9 +30,10 @@
 					<div class="new-candidate-inpt-lbl">Country</div>
 					<div>
 						<select class="new-candidate-inpt" formControlName="country" (change)="updateCountry()">
-							<option>NETHERLANDS</option>
-							<option>BELGIUM</option>
-							<option>UK</option>
+							<option value="NETHERLANDS">Netherlands</option>
+							<option value="BELGIUM">Belgium</option>
+							<option value="UK">UK</option>
+							<option value="REPUBLIC_OF_IRELAND">ROI</option>
 						</select>
 					</div>
 				</div>
