--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -5,8 +5,8 @@
 	<div *ngIf="currentView === 'suggestion-results'">
 		<button class="btn btn-secondary btnRight" (click)="showCreateAlertDialog()" download>Create Alert</button>
 	 </div>
-	 -->
-
+	-->
+    
 	<div>	
 		<form [formGroup]="suggestionFilterForm" *ngIf="currentView === 'suggestion-results'">
 	
@@ -96,6 +96,17 @@
 	</div>
 	
 	<!-- Suggestion Results -->
+	<div *ngIf="currentView === 'inline-cv'">
+	
+		<div style="text-align:right;margin-right:50px;">
+			<button class="btn btn-secondary btn-action" (click)="showSuggestedCandidateOverview(suggestedCandidate)">back</button>
+		</div>
+		
+		<object id="content"  class="cv-inline" [attr.data]="trustedResourceUrl" width="95%" height="500px"></object>
+	
+	</div>
+	
+	
 	<div *ngIf="currentView === 'suggestion-results'" class="suggestion-results">
 	
 		<div class="suggestion-icon" *ngFor="let suggestion of suggestions" (click)="showSuggestedCandidateOverview(suggestion)">
@@ -116,16 +127,15 @@
 	</div>
 
 	<!-- Suggestion Profile -->
-	<div style="margin-top:10px;" *ngIf="currentView !== 'suggestion-results'">
+	<div style="margin-top:10px;" *ngIf="currentView !== 'suggestion-results' && currentView !== 'inline-cv'">
 		<div style="text-align:right;margin-right:50px;">
 			<button *ngIf="!suggestedCandidate.flaggedAsUnavailable" class="btn btn-secondary btn-action" (click)="markCandidateAsUnavailable()" style="margin-right:10px;" title="If the candidtae is no longer available use this button to let us know and we will remove them form the system.">Flag as unavailable</button>
 			<button *ngIf="suggestedCandidate.flaggedAsUnavailable" disabled class="btn btn-secondary btn-action" style="margin-right:10px;background:red;">Flagged as unavailable</button>
-	    	
+	    	<button class="btn btn-secondary btn-action" (click)="copyEmailToClipboard()">Copy Email to Clipboard</button>
 			<a class="currliculum-link" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" >
 				<button class="btn btn-secondary btn-action" style="margin-right:10px;" >Download CV</button>
 			</a>
-			
-			<button class="btn btn-secondary btn-action" (click)="copyEmailToClipboard()">Copy Email to Clipboard</button>
+			<button class="btn btn-secondary btn-action" (click)="showInlineCVView()">Display CV</button>
 			<button class="btn btn-secondary btn-action" (click)="showSuggestionsResults()">back</button>
 		</div>
 	</div>
