UI updates and removed copy email evt functionality

--- a/recruit-gui/src/app/accounts/accounts.component.html
+++ b/recruit-gui/src/app/accounts/accounts.component.html
@@ -8,13 +8,13 @@
 	    <span class="nav-link" (click)="switchTab('candidates')">Candidates</span>
 	  </li>
 	  <li class="nav-item tabNav">
-	    <span class="nav-link" (click)="switchTab('availabilityChecks')">Availability Checks</span>
+	    <span class="nav-link" (click)="switchTab('availabilityChecks')">Availability</span>
 	  </li>
 	  <li class="nav-item tabNav">
-	    <span class="nav-link" (click)="switchTab('flaggedAsUnavailable')">Flagged as unavailable</span>
+	    <span class="nav-link" (click)="switchTab('flaggedAsUnavailable')">Flagged</span>
 	  </li>
 	   <li class="nav-item tabNav">
-	    <span class="nav-link" (click)="switchTab('subscriptionActions')">Subscription actions</span>
+	    <span class="nav-link" (click)="switchTab('subscriptionActions')">Subscription</span>
 	  </li>
 	</ul>
 	
