--- a/recruit-gui/src/app/accounts/accounts.component.css
+++ b/recruit-gui/src/app/accounts/accounts.component.css
@@ -16,6 +16,8 @@ h3{
 .btn-action{
 	margin-right:10px;
     min-width:100px;
+    margin-bottom:5px;
+    margin-top:5px;
 }
 
 .modal-header{
@@ -55,5 +57,3 @@ h3{
 .recruiter-trial-subscription{
 	color:blue;
 }
-
-
