--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -39,3 +39,10 @@
 	margin:10px;
 	font-size:12px;
 }
+
+.li-arenella-nav{
+	margin-bottom:5px;
+	min-width:160px;
+	text-align:center;
+	border-right: solid 1px grey;
+}
