--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -96,10 +96,15 @@
 	width:80%;	
 }
 
+.suggestion-buttons{
+	float:right;
+}
+
+
 .btn-action{
-	margin-left:10px;
-    min-width:100px;
-    margin-top:5px;
+	margin-top:5px;
+	margin-right:10px;
+    min-width:150px
 }
 
 .suggestion-search-bar{
