--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -128,12 +128,14 @@
 
 	<!-- Suggestion Profile -->
 	<div style="margin-top:10px;" *ngIf="currentView !== 'suggestion-results' && currentView !== 'inline-cv'">
-		<div style="text-align:right;margin-right:50px;">
-			<button *ngIf="!suggestedCandidate.flaggedAsUnavailable" class="btn btn-secondary btn-action" (click)="markCandidateAsUnavailable()" style="margin-right:10px;" title="If the candidtae is no longer available use this button to let us know and we will remove them form the system.">Flag as unavailable</button>
-			<button *ngIf="suggestedCandidate.flaggedAsUnavailable" disabled class="btn btn-secondary btn-action" style="margin-right:10px;background:red;">Flagged as unavailable</button>
-	    	<button class="btn btn-secondary btn-action" (click)="copyEmailToClipboard()">Copy Email to Clipboard</button>
+		<div class="suggestion-buttons">
+			<button *ngIf="!suggestedCandidate.flaggedAsUnavailable" class="btn btn-secondary btn-action" (click)="markCandidateAsUnavailable()" title="If the candidtae is no longer available use this button to let us know and we will remove them form the system.">Flag unavailable</button>
+			<button *ngIf="suggestedCandidate.flaggedAsUnavailable" disabled class="btn btn-secondary btn-action" style="margin-right:10px;background:red;">Flagged unavailable</button>
+	    	<!-- 
+	    	<button class="btn btn-secondary btn-action" (click)="copyEmailToClipboard()">Copy Email</button>
+			-->
 			<a class="currliculum-link" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" >
-				<button class="btn btn-secondary btn-action" style="margin-right:10px;" >Download CV</button>
+				<button class="btn btn-secondary btn-action">Download CV</button>
 			</a>
 			<button class="btn btn-secondary btn-action" (click)="showInlineCVView()">Display CV</button>
 			<button class="btn btn-secondary btn-action" (click)="showSuggestionsResults()">back</button>
