--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -165,7 +165,7 @@
 	background:#E8E8E8;
 	margin:10px;
 	width:140px;
-	height:120px;
+	height:140px;
 	cursor:pointer;
 }
 
@@ -280,6 +280,45 @@
 	background:red;
 	width:25%;
 	height:10px;
+}
+
+.suggestion-perception-result-perfect{
+	background:green;
+	width:100%;	
+	height:8px;
+	border-bottom: 1px solid black;
+}
+
+.suggestion-perception-result-excellent{
+	background:green;
+	width:90%;
+	height:8px;
+	border-bottom: 1px solid black;
+	border-right: 1px solid black;
+}
+
+.suggestion-perception-result-good{
+	background:green;
+	width:75%;
+	height:8px;
+	border-bottom: 1px solid black;
+	border-right: 1px solid black;
+}
+
+.suggestion-perception-result-average{
+	background:orange;
+	width:60%;
+	height:8px;
+	border-bottom: 1px solid black;
+	border-right: 1px solid black;
+}
+
+.suggestion-perception-result-poor{
+	background:red;
+	width:25%;
+	height:8px;
+	border-bottom: 1px solid black;
+	border-right: 1px solid black;
 }
 
 .candidate-suggestion-table > .table th, .table td {
