--- a/recruit-gui/src/app/suggestions/suggestions.component.html
+++ b/recruit-gui/src/app/suggestions/suggestions.component.html
@@ -114,6 +114,8 @@
 			<div class="suggestion-icon-header">
 				C{{suggestion.candidateId}}
 			</div>
+			<div title="Accuracy Skills" class="suggestion-perception-result-{{suggestion.accuracySkills}}"></div>
+			<div title="Accuracy Languages" class="suggestion-perception-result-{{suggestion.accuracyLanguages}}"></div>
 			<div class="suggestion-icon-body">
 				<div>
 					{{suggestion.firstname}} {{suggestion.surname}}
@@ -131,10 +133,7 @@
 		<div class="suggestion-buttons">
 			<button *ngIf="!suggestedCandidate.flaggedAsUnavailable" class="btn btn-secondary btn-action" (click)="markCandidateAsUnavailable()" title="If the candidtae is no longer available use this button to let us know and we will remove them form the system.">Flag unavailable</button>
 			<button *ngIf="suggestedCandidate.flaggedAsUnavailable" disabled class="btn btn-secondary btn-action" style="margin-right:10px;background:red;">Flagged unavailable</button>
-	    	<!-- 
-	    	<button class="btn btn-secondary btn-action" (click)="copyEmailToClipboard()">Copy Email</button>
-			-->
-			<a class="currliculum-link" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" >
+	    	<a class="currliculum-link" href="{{getCurriculumDownloadUrl(suggestedCandidate.candidateId)}}" >
 				<button class="btn btn-secondary btn-action">Download CV</button>
 			</a>
 			<button class="btn btn-secondary btn-action" (click)="showInlineCVView()">Display CV</button>
@@ -245,7 +244,6 @@
 							
 		</div>
 	</div>
-
 </div>
 
 <ng-template #feedbackBox let-modal>
