--- a/recruit-gui/src/app/suggestions/suggestions.component.css
+++ b/recruit-gui/src/app/suggestions/suggestions.component.css
@@ -16,7 +16,7 @@
 }
 
 .sugg-srch-job-title{
-	width:50%;
+	width:100%;
 	font-weight:bold;
 }
 
@@ -134,12 +134,6 @@
  	min-height:40px;
  }
  
- .min-max{
- 	width:60px;
- 	margin-left:10px;
- 	margin-right:10px;
- }
- 
  .lang-checkbox{
 	 margin-right:5px;
 	 margin-left:5px;
@@ -148,10 +142,10 @@
 
 .add-skill-btn{
 	width:50px;
-	margin-top:5px;
-	margin-left:5px;
-	padding-left:5px;
-	padding-right:5px;
+	margin-top:4px;
+	margin-left:4px;
+	padding-left:4px;
+	padding-right:4px;
 } 
 
 .search-label{
@@ -401,4 +395,26 @@
 .cv-inline{
 	margin-top:20px;
 	margin-left:40px;
+}
+
+.contract-type{
+	width:195px;
+}
+
+.country-filter{
+	margin-left:8px;
+}
+
+.skill-field{
+	width:140px;
+}
+
+.min{
+	width:75px;
+ 	margin-right:13px;
+}
+ 
+.max{
+ 	width:75px;
+ 	margin-left:13px;
 }
