--- a/recruit-gui/src/app/create-candidate/create-candidate.component.html
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.html
@@ -5,7 +5,7 @@
 				<div class="wholepagerow">
 					<div class="div-spacing">
 						<p style="border-bottom:2px solid black;">Curriculum</p>
-						<input type="file" style="padding-right:45px" (change)="uploadCurriculumFile($event)">
+						<input type="file" (change)="uploadCurriculumFile($event)">
 					</div>
 					<div class="div-spacing">
 						<table>
